[tool.poetry]
name = "code"
version = "0.1.0"
description = ""
authors = ["Thibaut Chataing <tchataing@palo-it.com>"]

[tool.poetry.dependencies]
python = "3.9"
pandas = "^1.4.1"
SQLAlchemy = "^1.4.31"
psycopg2-binary = "^2.9.3"
tqdm = "^4.62.3"
jupyterlab = "^3.2.9"
openpyxl = "^3.0.9"
scikit-learn = "^1.1.1"
numpy = "^1.22.4"
scipy = "^1.8.1"
matplotlib = "^3.5.2"
ipython = "^8.3.0"
sympy = "^1.10.1"
nose = "^1.3.7"
torch = "^1.11.0"
torchvision = "^0.12.0"
pandas-profiling = "^3.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
